fixes stats tables on mobile version

--- a/app/assets/stylesheets/custom/_polls_results_stats.scss
+++ b/app/assets/stylesheets/custom/_polls_results_stats.scss
@@ -201,7 +201,8 @@
 
     &.polls-participation,
     &.polls-participation-age,
-    &.polls-participation-district {
+    &.polls-participation-district,
+    &.polls-stats-district {
       td:nth-of-type(1):before,
       td:nth-of-type(2):before,
       td:nth-of-type(3):before,
@@ -232,6 +233,12 @@
       td:nth-of-type(4):before { content: "CORREO"; }
       td:nth-of-type(5):before { content: "TOTAL"; }
       td:nth-of-type(6):before { content: "% PARTICIPACIÓN POBLACIÓN DEL DISTRITO"; }
+    }
+
+    &.polls-stats-district {
+      td:nth-of-type(1):before { content: "WEB"; }
+      td:nth-of-type(2):before { content: "URNAS"; }
+      td:nth-of-type(3):before { content: "TOTAL"; }
     }
   }
 }
